syntax = "proto3";

import "server.proto";

option csharp_namespace = "Tempest.Protocol";

service ServerListService {
  rpc GetServers(GetServersRequest) returns (stream Server);
  rpc GetServerById(GetServerByIdRequest) returns (GetServerByIdResponse);
}

message GetServerByIdRequest {
  uint64 id = 1;
}

message GetServerByIdResponse {
  oneof result {
    Server server = 1;
  }
}

message GetServersRequest {
  optional string name = 1;
  optional string game = 2;
  optional string version = 3;
  optional string tags = 4;
  optional bool joinable = 5;
  optional bool join_in_progress = 6;
}